organized imports to avoid circular dependencies

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -12,6 +12,8 @@
         <script src="{{ url_for('static', filename='js/socketio/socket.io.min.js') }}">
         </script>
 
+        <script type="text/javascript" src="http://www.google.com/jsapi">
+        </script>
         <div id="main">
         {% block content %}
         {% endblock content %}
